Merge committed trade export into realtime lifecycle